# tws-redis-bridge

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py  docker-compose.yml
.github/: copilot-instructions.md
.github/prompts/: doc-update.prompt.md  follow-plan.prompt.md  rca.prompt.md
docs/: CODE-REVIEW-PRAGMATIC.md  CODE-REVIEW-REPORT.md  DESIGN-DECISIONS.md  FAIL-FAST-PLAN.md  PROJECT-SPECIFICATION.md  REVIEW-COMPARISON.md  TESTABILITY-ANALYSIS.md  TROUBLESHOOTING.md  TWS-REDIS-BRIDGE-IMPL.md
include/: MarketData.h  RedisPublisher.h  Serialization.h  TwsClient.h
src/: RedisPublisher.cpp  Serialization.cpp  TwsClient.cpp  main.cpp
tests/: CMakeLists.txt  benchmark_queue.cpp  test_serialization.cpp
tmp/: doc-update-plan.md
